k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushup-api
  namespace: pushups
spec:
  selector:
    app: pushup-api
  ports:
  - port: 80
    targetPort: 3000
